Update and refactor project part 1